@@ -37,7 +37,7 @@ $portal_gcf_cfg_dir = '/usr/share/geni-ch/portal/gcf.d';
 // Set to true for demo situations to auto approve new accounts.
 $portal_auto_approve = false;
 
-// Set to false to hide ABAC content.
+// Set to false to hide ABAC content and skip generating abac certs
 $portal_enable_abac = false;
 
 // Portal certificate file
